# datacraft-docker-workshop

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
app/: datacraft.py
gradio/: datacraft.py
gradio/utils/: outbreak.py
