[tool.poetry]
name = "datacraft-workshop-docker"
version = "0.1.0"
description = ""
authors = ["Julien Terrier <julien.terrier@ekimetrics.com", "Axel Richier <Axel.Richier@ekimetrics.com"]

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^3.44.2"
numpy = "^1.25.2"
matplotlib = "^3.7.3"
bokeh = "^3.2.2"
plotly = "^5.16.1"
altair = "^5.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
